--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
-language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+osx_image: xcode8
+language: swift
+cache: cocoapods
+podfile: Example/Podfile
+before_install:
+  - gem install cocoapods
+  - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/Phaedo.xcworkspace -scheme Phaedo-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
