--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ env:
     - LC_CTYPE=en_US.UTF-8
     - LANG=en_US.UTF-8
     - WORKSPACE=Phaedo.xcworkspace
-    - IOS_FRAMEWORK_SCHEME="Phaedo"
+    - IOS_FRAMEWORK_SCHEME="Phaedo iOS"
     - IOS_SDK=iphonesimulator10.0
-    - EXAMPLE_SCHEME="Phaedo-Example"
+    - EXAMPLE_SCHEME="iOS Example"
   matrix:
     - DESTINATION="OS=10.0,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
-    - DESTINATION="OS=9.0,name=iPhone 5"           SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=9.3,name=iPhone 5"           SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
 
 before_install:
   - brew update
@@ -24,7 +24,7 @@ script:
   - xcodebuild -version
   - xcodebuild -showsdks
 
-  - clang-format -i Phaedo/Classes/kiwi-objc/*.{h,mm}
+  - clang-format -i Source/kiwi-objc/*.{h,mm}
   - git diff-index --quiet HEAD || echo "Formatting errors detected. Did you run clang-format?"
 
   # Build Framework in Debug and Run Tests if specified
